# order_flow

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pytest.ini
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_orders.py
backend/app/core/: config.py  database.py  rabbitmq.py
backend/app/repositories/: orders.py
backend/app/schemas/: events.py  orders.py
backend/app/services/: event_publisher.py  order_service.py
backend/tests/: test_event_contracts.py  test_order_simulation.py  test_order_validation.py  test_rabbitmq_topology.py  test_status_transitions.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css
frontend/src/api/: http.ts  orders.ts
frontend/src/components/: OrderForm.vue  OrderTimeline.vue  StatusBadge.vue
frontend/src/stores/: orders.ts
frontend/src/views/: OrderCreate.vue  OrderDetail.vue  OrdersList.vue
workers/: Dockerfile  pyproject.toml
workers/tests/: test_notification_service.py  test_retry_service.py  test_worker_decisions.py
workers/worker_app/consumers/: notification_worker.py  payment_worker.py  runner.py  shipping_worker.py  stock_worker.py
workers/worker_app/services/: notification_service.py  payment_service.py  retry_service.py  shipping_service.py  stock_service.py
